# persist

./: .gitignore  .travis.yml  Changelog.md  LICENSE  README.md  fourmolu.yaml  persist.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/Data/: Persist.hs
src/Data/Persist/: Internal.hs  Internals.hs
tests/: GetTests.hs  RoundTrip.hs
